--- a/Untitled-checkpoint.ipynb
+++ b/Untitled-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "94b26d38",
    "metadata": {},
    "outputs": [],
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "76ede672",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Salary_Data_Based_country_and_race.csv')"
+    "data = pd.read_csv('Salary_Data_Based_country_and_race.csv') #Lectura de los datos "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "293d3444",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4                 20.0  200000.0     USA     Asian  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "613082ca",
    "metadata": {},
    "outputs": [
@@ -162,293 +162,27 @@
        "       'Years of Experience', 'Salary', 'Country', 'Race'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.columns.values"
+    "data.columns.values #Valores de las columnas "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9ba8dff3",
+   "id": "4f3d0d67",
    "metadata": {},
    "source": [
-    "#nada "
+    "## Cuantos valores nulos hay en cada columna "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "692f489e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['White', 'Hispanic', 'White', ..., 'Chinese', 'Korean', 'Black'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['Race'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a8788c64",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Female', 'Male', 'Other'], dtype=object)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dummy_Race= pd.get_dummies(data[\"Gender\"])\n",
-    "dummy_Race.columns.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "de37e6d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dummy_job = pd.get_dummies(data['Job Title'])\n",
-    "dictionary = {}\n",
-    "i = 0\n",
-    "for job in dummy_job:\n",
-    "    dictionary[job] = i\n",
-    "    i += 1\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "9a3f9946",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.get_dummies(data[\"Education Level\"]).columns.values.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "84e30367",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Years of Experience</th>\n",
-       "      <th>Salary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>6704.000000</td>\n",
-       "      <td>6702.000000</td>\n",
-       "      <td>6701.000000</td>\n",
-       "      <td>6699.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>3351.500000</td>\n",
-       "      <td>33.620859</td>\n",
-       "      <td>8.094687</td>\n",
-       "      <td>115326.964771</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1935.422435</td>\n",
-       "      <td>7.614633</td>\n",
-       "      <td>6.059003</td>\n",
-       "      <td>52786.183911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>21.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>350.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1675.750000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>70000.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>3351.500000</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>115000.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>5027.250000</td>\n",
-       "      <td>38.000000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>160000.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>6703.000000</td>\n",
-       "      <td>62.000000</td>\n",
-       "      <td>34.000000</td>\n",
-       "      <td>250000.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Unnamed: 0          Age  Years of Experience         Salary\n",
-       "count  6704.000000  6702.000000          6701.000000    6699.000000\n",
-       "mean   3351.500000    33.620859             8.094687  115326.964771\n",
-       "std    1935.422435     7.614633             6.059003   52786.183911\n",
-       "min       0.000000    21.000000             0.000000     350.000000\n",
-       "25%    1675.750000    28.000000             3.000000   70000.000000\n",
-       "50%    3351.500000    32.000000             7.000000  115000.000000\n",
-       "75%    5027.250000    38.000000            12.000000  160000.000000\n",
-       "max    6703.000000    62.000000            34.000000  250000.000000"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "4c08ec5c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.isnull(data[\"Age\"]).values.ravel().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "f0e5b456",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       False\n",
-       "1       False\n",
-       "2       False\n",
-       "3       False\n",
-       "4       False\n",
-       "        ...  \n",
-       "6699    False\n",
-       "6700    False\n",
-       "6701    False\n",
-       "6702    False\n",
-       "6703    False\n",
-       "Name: Age, Length: 6704, dtype: bool"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.isnull(data[\"Age\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "f51f9a20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def null_values(data,lista):\n",
-    "    null_val = []\n",
-    "    for item in lista:\n",
-    "        null_val.append(pd.isnull(data[item]).values.ravel().sum())\n",
-    "    return null_val\n",
-    "lista = np.array(['Unnamed: 0', 'Age', 'Gender', 'Education Level', 'Job Title',\n",
-    "       'Years of Experience', 'Salary', 'Country', 'Race'])\n",
-    "xd = null_values(data,lista)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "3af8f39c",
    "metadata": {},
    "outputs": [
     {
@@ -460,12 +194,26 @@
     }
    ],
    "source": [
-    "print('Los valores nulos en cada columna son: ', xd)"
+    "def null_values(data,lista): #Funcion para saber cuantos valores nulos hay en cada columna\n",
+    "    null_val = []\n",
+    "    for item in lista:\n",
+    "\n",
+    "        null_val.append(pd.isnull(data[item]).values.ravel().sum()) \n",
+    "        #Agrega a una lista los valores nulos de cada columna\n",
+    "\n",
+    "    return null_val\n",
+    "\n",
+    "lista = np.array(['Unnamed: 0', 'Age', 'Gender', 'Education Level', 'Job Title',\n",
+    "       'Years of Experience', 'Salary', 'Country', 'Race'])\n",
+    "#Lista con los nombres de cada columna\n",
+    "\n",
+    "valores_nulos = null_values(data,lista)\n",
+    "print('Los valores nulos en cada columna son: ', valores_nulos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "94b1577b",
    "metadata": {},
    "outputs": [],
@@ -475,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "65f92f89",
    "metadata": {},
    "outputs": [
@@ -679,13 +427,21 @@
        "[6704 rows x 9 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0e74b0b",
+   "metadata": {},
+   "source": [
+    "## Cambiar strings por numeros "
    ]
   },
   {
@@ -697,14 +453,19 @@
    "source": [
     "\n",
     "def change_values(data1):\n",
+    "#Funcion para cambiar los valores de las columnas por numeros \n",
+    "\n",
     "    columnas = []\n",
     "    for item in data1.columns.values:\n",
     "        if data1[item].dtypes == 'object':\n",
     "            columnas.append(item)\n",
+    "    #Esta parte crea una lista con valores que no sean floats o integer\n",
     "            \n",
     "    for item in columnas:\n",
-    "        x = [i for i in range(pd.get_dummies(data1[item]).columns.values.shape[0])]\n",
-    "        data1[item] = data1[item].replace(pd.get_dummies(data1[item]).columns.values, x)\n",
+    "        valores_columnas = pd.get_dummies(data1[item]).columns.values #Crea una lista cada valor distinto en cada columna\n",
+    "        x = [i for i in range(valores_columnas.shape[0])] #Crea una lista de numeros del 0 hasta la longitud de valores_columnas\n",
+    "        data1[item] = data1[item].replace(valores_columnas, x) #Intercambia los valores\n",
+    "    \n",
     "    return data1 "
    ]
   },
@@ -1124,14 +885,14 @@
    ],
    "source": [
     "data2 = data1 \n",
-    "data3 = data2.dropna(axis=0,how=\"any\")\n",
-    "data4 = data3.drop('Unnamed: 0', axis = 1)\n",
+    "data3 = data2.dropna(axis=0,how=\"any\") #Elimina todos los NaN\n",
+    "data4 = data3.drop('Unnamed: 0', axis = 1) #Elimina la primera columna \n",
     "data4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "e6e58aee",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1042,7 @@
        "max              34.000000  250000.000000     4.000000     9.000000  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "cc0da943",
    "metadata": {},
    "outputs": [
@@ -1309,16 +1070,17 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "def matrix_corr(data): #matriz de correlación\n",
+    "def matrix_corr(data): \n",
     "    correlation = data.corr()\n",
     "    sns.heatmap(correlation, annot=True, cbar=True, cmap=\"RdYlGn\")\n",
+    "#Matriz de correlacion para los datos \n",
     "\n",
     "matrix_corr(data4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "51f8abd6",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1090,7 @@
        "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
