Error en change_values

--- a/Untitled-checkpoint.ipynb
+++ b/Untitled-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 125,
    "id": "94b26d38",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 126,
    "id": "76ede672",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 127,
    "id": "293d3444",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4                 20.0  200000.0     USA     Asian  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 128,
    "id": "613082ca",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "       'Years of Experience', 'Salary', 'Country', 'Race'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 129,
    "id": "f51f9a20",
    "metadata": {},
    "outputs": [
@@ -213,17 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 130,
    "id": "94b1577b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = data"
+    "data_new = data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 131,
    "id": "65f92f89",
    "metadata": {},
    "outputs": [
@@ -427,13 +427,13 @@
        "[6704 rows x 9 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data1"
+    "data"
    ]
   },
   {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 132,
    "id": "cf1486fc",
    "metadata": {},
    "outputs": [],
@@ -466,13 +466,23 @@
     "        x = [i for i in range(valores_columnas.shape[0])] #Crea una lista de numeros del 0 hasta la longitud de valores_columnas\n",
     "        data1[item] = data1[item].replace(valores_columnas, x) #Intercambia los valores\n",
     "    \n",
-    "    return data1 "
+    "    return data1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 133,
    "id": "443aa562",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = change_values(data_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "a9431274",
    "metadata": {},
    "outputs": [
     {
@@ -675,18 +685,18 @@
        "[6704 rows x 9 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "change_values(data1)"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 135,
    "id": "38ff37a5",
    "metadata": {},
    "outputs": [
@@ -878,13 +888,13 @@
        "[6698 rows x 8 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data2 = data1 \n",
+    "data2 = datos\n",
     "data3 = data2.dropna(axis=0,how=\"any\") #Elimina todos los NaN\n",
     "data4 = data3.drop('Unnamed: 0', axis = 1) #Elimina la primera columna \n",
     "data4"
@@ -892,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 136,
    "id": "e6e58aee",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1052,7 @@
        "max              34.000000  250000.000000     4.000000     9.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 137,
    "id": "cc0da943",
    "metadata": {},
    "outputs": [
@@ -1077,35 +1087,6 @@
     "\n",
     "matrix_corr(data4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "51f8abd6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.count_nonzero(data['Gender'].values == 'Other')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23637890",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
