--- a/4_K_vecinos.ipynb
+++ b/4_K_vecinos.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,10 +200,30 @@
     "best_k = gridsearch.best_params_[\"n_neighbors\"]\n",
     "best_weights = gridsearch.best_params_[\"weights\"]\n",
     "bagged_knn = KNeighborsRegressor(n_neighbors=best_k, weights=best_weights)\n",
-    "bagging_model = BaggingRegressor(bagged_knn, n_estimators=100)\n",
+    "bagging_model = BaggingRegressor(bagged_knn, n_estimators=10)\n",
     "bagging_model.fit(X_train, Y_train)\n",
     "print('Accuracy of K-NN classifier on training set: {:.2f}'.format(bagging_model.score(X_train, Y_train)))\n",
     "print('Accuracy of K-NN classifier on test set: {:.2f}'.format(bagging_model.score(X_test, Y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'distance'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_weights"
    ]
   },
   {
