--- a/5_arboles_de_decision.ipynb
+++ b/5_arboles_de_decision.ipynb
@@ -35,6 +35,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Busqueda del mejor hiperparametro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -78,6 +85,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -112,16 +124,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entrenamiento y resultado del dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El accuracy en train es: 0.7738349722103463\n",
-      "El accuracy en test es: 0.674975074775673\n"
+      "El coeficiente de determinacion en train es: 0.7738349722103463\n",
+      "El coeficiente de determinacion en test es: 0.674975074775673\n"
      ]
     }
    ],
@@ -129,8 +148,15 @@
     "y_train_pred = best_clf.predict(X_train)\n",
     "y_test_pred = best_clf.predict(X_test)\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
-    "print('El accuracy en train es:',accuracy_score(Y_train,y_train_pred))\n",
-    "print('El accuracy en test es:', accuracy_score(Y_test,y_test_pred))"
+    "print('El coeficiente de determinacion en train es:',accuracy_score(Y_train,y_train_pred))\n",
+    "print('El coeficiente de determinacion en test es:', accuracy_score(Y_test,y_test_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arbol de decision"
    ]
   },
   {
