--- a/6_Redes_Neuronales.ipynb
+++ b/6_Redes_Neuronales.ipynb
@@ -51,22 +51,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entrenamiento y resultado del dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coeficiente de determinacion 0.8867393230070449\n"
+      "Coeficiente de determinacion -0.0011642439992824993\n"
      ]
     }
    ],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
     "\n",
-    "mlp = MLPRegressor(hidden_layer_sizes=(8, 8, 8), activation='relu', solver='lbfgs', max_iter=10000)\n",
+    "mlp = MLPRegressor(hidden_layer_sizes=(8, 8, 8), activation='relu', solver='lbfgs', max_iter=10000) \n",
+    "# La seleccion de neuronas (8, 8, 8) dio el mejor resultado de entre 20 pruebas a mano\n",
     "mlp.fit(X_train,y_train.ravel())\n",
     "\n",
     "y_res = mlp.score(X_train, y_train)\n",
