--- a/2_Linear_regression.ipynb
+++ b/2_Linear_regression.ipynb
@@ -29,14 +29,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('datos_limpios.csv') #Lectura de los datos "
+    "data = pd.read_csv('clean_data.csv') #Lectura de los datos "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usamos los datos limpios que hemos hecho \n"
+    "We use the data we cleaned"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primero haremos regresion lineal para una variable, lo realizaremos las caracteristicas 'Years of Experiene' y 'Race' ya que una tiene mucha correlacion con la caracteristica a medir y la otra muy poca."
+    "First, we will conduct a linear regression for a single variable, using the features 'Years of Experience' and 'Race', as one has a high correlation with the measured characteristic, and the other has very little."
    ]
   },
   {
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dividimos los datos en datos de prueba y datos de entreanamiento. "
+    "We divided the data into training and testing datasets."
    ]
   },
   {
@@ -424,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En la siguiente celda creamos dos funciones, una que entrene y nos de el resultado de un array de 1 dimension (tiene grafica) y otra en general que solo nos da los coeficientes"
+    "In the following cell, we create two functions: one that trains and provides the result as a one-dimensional array (which includes a plot), and another more general one that only gives us the coefficients."
    ]
   },
   {
@@ -434,19 +434,18 @@
    "outputs": [],
    "source": [
     "def show_result_1d(x_train, x_test, y_train, y_test, char = 'Caracteristicas'):\n",
-    "    #Almacenamos el modelo en una variable\n",
+    "   \n",
     "    model = LinearRegression()\n",
-    "    # Entrenamos el dataset\n",
+    "    # Train dataset\n",
     "    model.fit(x_train, y_train)\n",
-    "    # Prediccion obtenida\n",
+    "    # Prediction\n",
     "    y_pred = model.predict(x_test)\n",
-    "    #Coeficientes\n",
+    "    # Coefficients\n",
     "    print('m = ' + str(model.coef_) + ', b = ' + str(model.intercept_)) \n",
     "    print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))\n",
     "    print(\"Coefficient of determination: %.2f\" % r2_score(y_test, y_pred))\n",
     "\n",
-    "    # Graficamos\n",
-    "    #Grafica del conjunto de entrenamiento\n",
+    "    # Plot of train set\n",
     "    plt.figure(figsize=(15,5))\n",
     "    plt.subplot(1,2,1)\n",
     "    plt.scatter(x_train, y_train, color=\"red\",label='Sample data')\n",
@@ -454,7 +453,7 @@
     "    plt.title(\"Sueldo en relación con los años del conjunto de entrenamiento\")\n",
     "    plt.xlabel(char)\n",
     "    plt.ylabel(\"Salarios\")\n",
-    "    # Grafica del conjunto de prueba\n",
+    "    # Plot of the test set\n",
     "    plt.subplot(1,2,2)\n",
     "    plt.scatter(x_test, y_test, color=\"red\")\n",
     "    plt.plot(x_train, model.predict(x_train), color=\"blue\")\n",
@@ -463,13 +462,13 @@
     "    plt.ylabel(\"Salarios\")\n",
     "\n",
     "def show_result(x_train, x_test, y_train, y_test):\n",
-    "    #Almacenamos el modelo en una variable\n",
+    "    \n",
     "    model = LinearRegression()\n",
-    "    # Entrenamos el dataset\n",
+    "    # We train the dataset\n",
     "    model.fit(x_train, y_train)\n",
-    "    # Prediccion obtenida\n",
+    "    # Prediction\n",
     "    y_pred = model.predict(x_test)\n",
-    "    #Coeficientes\n",
+    "    # Coefficients\n",
     "    print('m = ' + str(model.coef_) + ', b = ' + str(model.intercept_)) \n",
     "    print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))\n",
     "    print(\"Coefficient of determination: %.2f\" % r2_score(y_test, y_pred))\n",
@@ -538,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regresion lineal multidimensional"
+    "## Multidimensional Linear Regression"
    ]
   },
   {
@@ -615,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creacion de datos sinteticos (No tiene utilidad en este dataset)"
+    "## Synthetic Data Generation (Not useful in this dataset)"
    ]
   },
   {
