--- a/3_Logistic_regression.ipynb
+++ b/3_Logistic_regression.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('datos_limpios.csv') "
+    "data = pd.read_csv('clean_data.csv') "
    ]
   },
   {
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Eleccion de la clasificacion"
+    "## Clasification Election"
    ]
   },
   {
