--- a/4_K_neighbors.ipynb
+++ b/4_K_neighbors.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('datos_limpios.csv') "
+    "data = pd.read_csv('clean_data.csv') "
    ]
   },
   {
@@ -89,7 +89,7 @@
     "    plt.legend()\n",
     "    plt.title(\"KNN (k = %i, weights = '%s')\" % (n_neighbors,weights))\n",
     "\n",
-    "plt.show # Mostramos la grafica en pantalla"
+    "plt.show # Show plot"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mejores hiperparametros obtenidos"
+    "Best hyperparameters"
    ]
   },
   {
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resultado obtenido con una columna"
+    "Result with one column"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resultado obtenido con todo el dataset."
+    "General result"
    ]
   },
   {
