--- a/5_Decision_Trees.ipynb
+++ b/5_Decision_Trees.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('datos_limpios.csv') "
+    "data = pd.read_csv('clean_data.csv') "
    ]
   },
   {
@@ -70,7 +70,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "# Definir el clasificador y los valores de los hiperparámetros a probar\n",
+    "# Define the classifier and values to use\n",
     "clf = DecisionTreeClassifier(random_state=42)\n",
     "param_grid = {'criterion': ['gini', 'entropy'], 'max_depth': range(10, 25)}\n",
     "\n",
